--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "@prisma/client": "^5.2.0",
     "@types/express": "^4.17.17",
     "axios": "^1.5.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
@@ -21,6 +23,7 @@
     "handlebars": "^4.7.8",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
+    "prisma": "^5.2.0",
     "sequelize": "^6.33.0",
     "ts-node": "^10.9.1",
     "typeorm": "^0.3.17",
